--- a/profile.html
+++ b/profile.html
@@ -16,13 +16,13 @@
             height: 100%;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 9999;
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
             animation: fadeIn 0.5s ease-in-out forwards;
         }
 
-        #spinner {
+        .spinner {
             width: 0;
             height: 0;
             border-left: 30px solid transparent;
@@ -37,6 +37,7 @@
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
             }
