--- a/profile.html
+++ b/profile.html
@@ -16,20 +16,19 @@
             height: 100%;
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 9999;
-            display: none;
+            display: flex;
             justify-content: center;
             align-items: center;
             animation: fadeIn 0.5s ease-in-out forwards;
         }
 
         .spinner {
-            width: 0;
-            height: 0;
-            border-left: 30px solid transparent;
-            border-right: 30px solid transparent;
-            border-bottom: 52px solid #4CAF50;
-            position: relative;
-            animation: rotate 1s linear infinite;
+            border: 6px solid rgba(0, 0, 0, 0.1);
+            border-left-color: #4CAF50;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
         }
 
         /* Animations */
@@ -37,7 +36,6 @@
             from {
                 opacity: 0;
             }
-
             to {
                 opacity: 1;
             }
