--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="/" class="link active">Home</a></li>
                     <li><a href="/blog.html" class="link">Blog</a></li>
-                    <li><a href="/service.html" class="link">Services</a></li>
+                    <li><a href="/tested.html" class="link">tested</a></li>
                     <li><a href="/about.html" class="link">About</a></li>
                 </ul>
             </div>
