--- a/withdraw.html
+++ b/withdraw.html
@@ -21,7 +21,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 100px;
+            margin-top: 40px;
+            background-color: azure;
         }
 
         img {
@@ -35,9 +36,8 @@
         }
 
         .withdraw-page {
-
-            height: 75vh;
-            width: 60vw;
+            height: 90vh;
+            width: 90vw;
             border: 2px solid rgba(34, 32, 32, 0.442);
             border-radius: 5px;
             background-color: rgba(246, 235, 247, 0.808);
@@ -165,7 +165,7 @@
 
         .withdraw-form label {
             font-size: 14px;
-            margin-left: 4px;
+            margin-left: 6px;
             margin-top: 8px;
             margin-bottom: -3px;
             font-weight: 550;
@@ -174,9 +174,12 @@
 
         .withdraw-form input {
             height: 38px;
-            width: 260px;
+            width: 290px;
             border: 1.7px solid rgb(165, 22, 200);
             border-radius: 6px;
+            outline: 1px solid rgba(81, 0, 79, 0.316);
+            outline-style:dashed;
+            outline-offset: 1px;
             color: rgba(0, 0, 0, 0.925);
             background-color: rgb(255, 255, 255);
             font-size: 15px;
@@ -200,7 +203,9 @@
             border-radius: 50px !important;
             cursor: pointer;
             align-self: center;
-
+            outline: none !important;
+            margin-top: 20px !important;
+            
         }
 
         .withdraw:hover {
@@ -244,15 +249,11 @@
 
             .withdraw-page {
 
-                height: 75vh;
-                width: 80vw;
-
-
+                height: 85vh;
+                width: 90vw;
             }
 
             body {
-
-
                 margin-top: 70px;
             }
 
@@ -263,22 +264,17 @@
                 font-family: 'Times New Roman', Times, serif;
                 text-wrap: wrap;
                 text-align: center;
-
-
             }
 
             .withdraw-form label {
                 font-size: 13px;
-                margin: 4px;
             }
 
             .withdraw-form input {
-                height: 35px;
-                width: 200px;
-
-                border-radius: 3px;
+                height: 45px;
+                width: 280px;
                 font-size: 15px;
-                margin: 4px;
+                /* margin: 4px; */
 
             }
 
@@ -300,7 +296,8 @@
                 <label for="withdrawn-coin">COIN:</label>
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
                 <label for="upi-id">UPI ID:</label>
-                <input type="text" id="upi-id" name="upi-id" required placeholder="Please enter a valid UPI ID">
+                <input type="text" id="upi-id" name="upi-id"  required pattern="^[\w.-]+@[a-zA-Z]+$"
+                required placeholder="Please enter a valid UPI ID">
                 <label for="check-password">PASSWORD :</label>
                 <input type="password" id="check-password" placeholder="Enter Your Password" required>
                 <div id="info"></div>
