--- a/withdraw.html
+++ b/withdraw.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
             box-sizing: border-box;
             font-family: sans-serif;
         }
+
         body {
             background-color: rgba(255, 255, 255, 0.682);
             display: flex;
@@ -20,13 +22,16 @@
             margin-top: 40px;
             background-color: azure;
         }
+
         img {
             height: 22px;
             width: 22px;
         }
+
         .coin-photo {
             margin: 0px 5px 0px 5px;
         }
+
         .withdraw-page {
             height: 90vh;
             width: 90vw;
@@ -38,18 +43,21 @@
             flex-direction: column;
             align-items: center;
         }
+
         .withdraw-info {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
         }
+
         form {
             display: flex;
             justify-content: center;
             align-items: flex-start;
             flex-direction: column;
         }
+
         /* Loading spinner styling */
         .spinner {
             display: none;
@@ -62,6 +70,7 @@
             z-index: 10;
             transform: translate(-50%, -50%);
         }
+
         .coin {
             width: 100%;
             height: 100%;
@@ -71,14 +80,17 @@
             border-radius: 50%;
             animation: rotate 1s linear infinite;
         }
+
         @keyframes rotate {
             0% {
                 transform: rotate(0deg);
             }
+
             100% {
                 transform: rotate(360deg);
             }
         }
+
         /* Blur overlay styling */
         .blur-overlay {
             display: none;
@@ -91,17 +103,21 @@
             background: rgba(255, 255, 255, 0.7);
             z-index: 5;
         }
+
         .blur {
             filter: blur(2px);
         }
+
         /* Responsive styling */
         img {
             height: 22px;
             width: 22px;
         }
+
         .coin-photo {
             margin: 0px 5px 0px 5px;
         }
+
         .withdraw-page>span:first-of-type {
             font-size: 36px;
             font-weight: 700;
@@ -110,6 +126,7 @@
             text-wrap: wrap;
             color: rgb(114, 2, 129);
         }
+
         .withdraw-info>.child-info:nth-child(1) {
             display: flex;
             justify-content: center;
@@ -119,12 +136,14 @@
             color: rgb(114, 2, 129);
             font-weight: 600;
         }
+
         .withdraw-info>.child-info:nth-child(2) {
             font-size: 15px;
             color: rgb(114, 2, 129);
             margin: 6px;
             font-weight: 600;
         }
+
         .withdraw-info>.child-info:nth-child(3) {
             font-size: 17px;
             display: flex;
@@ -136,6 +155,7 @@
             border-radius: 20px;
             color: rgb(25, 22, 2) !important;
         }
+
         .withdraw-form label {
             font-size: 14px;
             margin-left: 6px;
@@ -144,6 +164,7 @@
             font-weight: 550;
             color: rgba(0, 0, 0, 0.658);
         }
+
         .withdraw-form input {
             width: 278px;
             height: 30px;
@@ -155,6 +176,7 @@
             font-size: 15px;
             font-weight: 600;
         }
+
         .withdraw {
             margin-left: 6px;
             width: 290px;
@@ -169,9 +191,11 @@
             margin-top: 10px;
             margin-bottom: 12px;
         }
+
         .withdraw:hover {
             background-color: rgba(114, 2, 129, 0.904);
         }
+
         /* Error and success styles */
         #info.error,
         #info.success {
@@ -182,64 +206,119 @@
             text-align: center;
             width: 100%;
         }
+
         .error {
             color: red;
             border: 1px solid red;
             animation: shake 0.5s;
         }
+
         .success {
             color: green;
             border: 1px solid green;
             animation: zoomIn 0.5s;
         }
+
         /* Shake animation for errors */
         @keyframes shake {
+
             0%,
             100% {
                 transform: translateX(0);
             }
+
             20%,
             60% {
                 transform: translateX(-10px);
             }
+
             40%,
             80% {
                 transform: translateX(10px);
             }
         }
+
         /* Zoom-in animation for success */
         @keyframes zoomIn {
             from {
                 transform: scale(0.5);
                 opacity: 0;
             }
+
             to {
                 transform: scale(1);
                 opacity: 1;
             }
         }
+
         /* Error border for input fields */
         input.error {
             border-color: red;
             outline-color: red;
         }
+
+        /* Pop-up message styling */
+        #popupMessage {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            z-index: 15;
+            animation: fadeInOut 1s;
+        }
+
+        #popupMessage.success {
+            background-color: rgba(0, 128, 0, 0.8);
+            /* Green background */
+            color: white;
+        }
+
+        #popupMessage.error {
+            background-color: rgba(255, 0, 0, 0.8);
+            /* Red background */
+            color: white;
+        }
+
+        /* Animation for fading in and out */
+        @keyframes fadeInOut {
+            0% {
+                opacity: 0;
+                transform: translate(-50%, -60%);
+            }
+
+            50% {
+                opacity: 1;
+                transform: translate(-50%, -50%);
+            }
+
+            100% {
+                opacity: 0;
+                transform: translate(-50%, -60%);
+            }
+        }
     </style>
 </head>
+
 <body>
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">
+            <!-- <div class="child-info">
                 <img src="coin.png" alt="Coin" class="coin-photo">
-                <span>Coin Balance: <span id="coin-balance">0</span></span>
-            </div>
-            <div class="child-info">Min. Withdrawal Amount: 100 Coins</div>
+                <span>Coin Balance: <span id="coin-balanced">0</span></span>
+            </div> -->
+            <div class="child-info">Min. Withdrawal Amount: 00 Coins</div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
                 <label for="upi-id">UPI ID:</label>
-                <input type="text" id="upi-id" name="upi-id" required pattern="^[\w.-]+@[a-zA-Z]+$" required placeholder="Please enter a valid UPI ID">
+                <input type="text" id="upi-id" name="upi-id" required pattern="^[\w.-]+@[a-zA-Z]+$" required
+                    placeholder="Please enter a valid UPI ID">
                 <label for="check-password">PASSWORD :</label>
                 <input type="password" id="check-password" placeholder="Enter Your Password" required>
                 <div id="info"></div>
@@ -253,7 +332,10 @@
         <div class="coin"></div>
     </div>
     <div id="blurOverlay" class="blur-overlay"></div>
+    <!-- Pop-up Message -->
+    <div id="popupMessage"></div>
 
     <script src="Withdraw.js"></script>
 </body>
+
 </html>
