--- a/withdraw.html
+++ b/withdraw.html
@@ -7,61 +7,110 @@
     <title>Withdraw</title>
     <link rel="stylesheet" href="withdraw.css">
     <style>
+        /* General Styles */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
-            background-color: rgba(255, 255, 255, 0.682);
+            background-color: azure;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 40px;
-            background-color: azure;
-        }
-
-        img {
-            height: 22px;
-            width: 22px;
-        }
-
-        .coin-photo {
-            margin: 0px 5px 0px 5px;
+            margin: 0;
+            padding: 20px;
         }
 
         .withdraw-page {
-            height: 90vh;
-            width: 90vw;
+            width: 100%;
+            max-width: 600px;
+            padding: 20px;
             border: 2px solid rgba(34, 32, 32, 0.442);
-            border-radius: 5px;
+            border-radius: 10px;
             background-color: rgba(246, 235, 247, 0.808);
             display: flex;
-            justify-content: center;
             flex-direction: column;
             align-items: center;
+        }
+
+        .withdraw-page span {
+            font-size: 24px;
+            font-weight: 700;
+            color: rgb(114, 2, 129);
+            margin-bottom: 20px;
+            text-align: center;
         }
 
         .withdraw-info {
+            width: 100%;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            flex-direction: column;
         }
 
-        form {
+        .child-info {
+            font-size: 16px;
+            color: rgb(114, 2, 129);
+            margin: 6px 0;
+            text-align: center;
+            font-weight: 600;
+        }
+
+        .withdraw-form {
+            width: 100%;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
             flex-direction: column;
+            align-items: flex-start;
         }
 
-        /* Loading spinner styling */
+        .withdraw-form label {
+            font-size: 14px;
+            margin-top: 8px;
+            margin-bottom: -3px;
+            font-weight: 550;
+            color: rgba(0, 0, 0, 0.658);
+        }
+
+        .withdraw-form input {
+            width: 100%;
+            height: 40px;
+            margin: 6px 0;
+            padding: 8px;
+            border-radius: 5px;
+            border: 1.5px solid rgba(148, 148, 148, 0.904);
+            font-size: 16px;
+            font-weight: 600;
+            outline: none;
+        }
+
+        .withdraw-form input.error {
+            border-color: red;
+            color: red;
+        }
+
+        .withdraw {
+            width: 100%;
+            height: 40px;
+            margin-top: 10px;
+            border-radius: 6px;
+            background-color: rgb(114, 2, 129);
+            color: white;
+            cursor: pointer;
+            border: none;
+            outline: none;
+            font-size: 17px;
+        }
+
+        .withdraw:hover {
+            background-color: rgba(114, 2, 129, 0.904);
+        }
+
+        /* Loading Spinner and Blur Overlay */
         .spinner {
             display: none;
-            /* Initially hidden */
             position: fixed;
             top: 50%;
             left: 50%;
@@ -75,7 +124,6 @@
             width: 100%;
             height: 100%;
             background-image: url('coin.png');
-            /* Add your coin image here */
             background-size: cover;
             border-radius: 50%;
             animation: rotate 1s linear infinite;
@@ -91,10 +139,8 @@
             }
         }
 
-        /* Blur overlay styling */
         .blur-overlay {
             display: none;
-            /* Initially hidden */
             position: fixed;
             top: 0;
             left: 0;
@@ -108,156 +154,7 @@
             filter: blur(2px);
         }
 
-        /* Responsive styling */
-        img {
-            height: 22px;
-            width: 22px;
-        }
-
-        .coin-photo {
-            margin: 0px 5px 0px 5px;
-        }
-
-        .withdraw-page>span:first-of-type {
-            font-size: 36px;
-            font-weight: 700;
-            margin: 20px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
-            text-wrap: wrap;
-            color: rgb(114, 2, 129);
-        }
-
-        .withdraw-info>.child-info:nth-child(1) {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            margin: 6px;
-            color: rgb(114, 2, 129);
-            font-weight: 600;
-        }
-
-        .withdraw-info>.child-info:nth-child(2) {
-            font-size: 15px;
-            color: rgb(114, 2, 129);
-            margin: 6px;
-            font-weight: 600;
-        }
-
-        .withdraw-info>.child-info:nth-child(3) {
-            font-size: 17px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 6px;
-            padding: 1px;
-            border: 3px solid gold;
-            border-radius: 20px;
-            color: rgb(25, 22, 2) !important;
-        }
-
-        .withdraw-form label {
-            font-size: 14px;
-            margin-left: 6px;
-            margin-top: 8px;
-            margin-bottom: -3px;
-            font-weight: 550;
-            color: rgba(0, 0, 0, 0.658);
-        }
-
-        .withdraw-form input {
-            width: 278px;
-            height: 30px;
-            margin: 6px;
-            padding: 4px;
-            outline: none;
-            border-radius: 5px;
-            border: 1.5px solid rgba(148, 148, 148, 0.904);
-            font-size: 15px;
-            font-weight: 600;
-        }
-
-        .withdraw {
-            margin-left: 6px;
-            width: 290px;
-            border-radius: 6px;
-            height: 33px;
-            background-color: rgb(114, 2, 129);
-            color: white;
-            cursor: pointer;
-            border: none;
-            outline: none;
-            font-size: 17px;
-            margin-top: 10px;
-            margin-bottom: 12px;
-        }
-
-        .withdraw:hover {
-            background-color: rgba(114, 2, 129, 0.904);
-        }
-
-        /* Error and success styles */
-        #info.error,
-        #info.success {
-            font-size: 14px;
-            margin-top: 10px;
-            padding: 5px;
-            border-radius: 5px;
-            text-align: center;
-            width: 100%;
-        }
-
-        .error {
-            color: red;
-            border: 1px solid red;
-            animation: shake 0.5s;
-        }
-
-        .success {
-            color: green;
-            border: 1px solid green;
-            animation: zoomIn 0.5s;
-        }
-
-        /* Shake animation for errors */
-        @keyframes shake {
-
-            0%,
-            100% {
-                transform: translateX(0);
-            }
-
-            20%,
-            60% {
-                transform: translateX(-10px);
-            }
-
-            40%,
-            80% {
-                transform: translateX(10px);
-            }
-        }
-
-        /* Zoom-in animation for success */
-        @keyframes zoomIn {
-            from {
-                transform: scale(0.5);
-                opacity: 0;
-            }
-
-            to {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        /* Error border for input fields */
-        input.error {
-            border-color: red;
-            outline-color: red;
-        }
-
-        /* Pop-up message styling */
+        /* Pop-up Message Styling */
         #popupMessage {
             display: none;
             position: fixed;
@@ -273,17 +170,14 @@
 
         #popupMessage.success {
             background-color: rgba(0, 128, 0, 0.8);
-            /* Green background */
             color: white;
         }
 
         #popupMessage.error {
             background-color: rgba(255, 0, 0, 0.8);
-            /* Red background */
             color: white;
         }
 
-        /* Animation for fading in and out */
         @keyframes fadeInOut {
             0% {
                 opacity: 0;
@@ -300,6 +194,35 @@
                 transform: translate(-50%, -60%);
             }
         }
+
+        /* Media Queries for Responsiveness */
+        @media (max-width: 768px) {
+            .withdraw-page {
+                max-width: 90%;
+            }
+
+            .withdraw-page span {
+                font-size: 20px;
+            }
+
+            .child-info {
+                font-size: 14px;
+            }
+
+            .withdraw-form label {
+                font-size: 12px;
+            }
+
+            .withdraw-form input {
+                height: 36px;
+                font-size: 14px;
+            }
+
+            .withdraw {
+                height: 36px;
+                font-size: 15px;
+            }
+        }
     </style>
 </head>
 
@@ -307,11 +230,7 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <!-- <div class="child-info">
-                <img src="coin.png" alt="Coin" class="coin-photo">
-                <span>Coin Balance: <span id="coin-balanced">0</span></span>
-            </div> -->
-            <div class="child-info">Min. Withdrawal Amount: 00 Coins</div>
+            <div class="child-info">Min. Withdrawal Amount: 100 Coins</div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
@@ -332,6 +251,7 @@
         <div class="coin"></div>
     </div>
     <div id="blurOverlay" class="blur-overlay"></div>
+
     <!-- Pop-up Message -->
     <div id="popupMessage"></div>
 
