--- a/withdraw.html
+++ b/withdraw.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Withdraw</title>
-    <link rel="stylesheet" href="withdraw.css">
     <style>
         /* General Styles */
         * {
@@ -20,13 +19,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0;
-            padding: 20px;
+            height: 100vh;
+            overflow: hidden;
         }
 
         .withdraw-page {
-            width: 100%;
-            max-width: 600px;
+            width: 90%;
+            max-width: 500px;
             padding: 20px;
             border: 2px solid rgba(34, 32, 32, 0.442);
             border-radius: 10px;
@@ -34,10 +33,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .withdraw-page span {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: 700;
             color: rgb(114, 2, 129);
             margin-bottom: 20px;
@@ -89,6 +89,7 @@
         .withdraw-form input.error {
             border-color: red;
             color: red;
+            font-weight: bold;
         }
 
         .withdraw {
@@ -102,10 +103,17 @@
             border: none;
             outline: none;
             font-size: 17px;
+            transition: background-color 0.3s, transform 0.3s;
         }
 
         .withdraw:hover {
-            background-color: rgba(114, 2, 129, 0.904);
+            background-color: rgba(114, 2, 129, 0.8);
+            transform: scale(1.05);
+        }
+
+        .withdraw:active {
+            background-color: rgba(114, 2, 129, 0.6);
+            transform: scale(0.95);
         }
 
         /* Loading Spinner and Blur Overlay */
@@ -198,11 +206,14 @@
         /* Media Queries for Responsiveness */
         @media (max-width: 768px) {
             .withdraw-page {
-                max-width: 90%;
+                width: 100%;
+                height: auto;
+                margin: 0 20px;
+                padding: 20px;
             }
 
             .withdraw-page span {
-                font-size: 20px;
+                font-size: 22px;
             }
 
             .child-info {
@@ -256,6 +267,7 @@
     <div id="popupMessage"></div>
 
     <script src="Withdraw.js"></script>
+
 </body>
 
 </html>
