--- a/withdraw.html
+++ b/withdraw.html
@@ -71,10 +71,12 @@
         }
 
         .child-info {
+            display: flex;
             font-size: 18px;
             color: rgb(114, 2, 129);
             margin: 8px 0;
             text-align: center;
+            justify-content: center;
             font-weight: 600;
         }
 
@@ -265,7 +267,7 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">Min. Withdrawal= <span><img src="coin.png" id="coinn" alt="coin"></span> 500</div>
+            <div class="child-info"><span>Min. Withdrawal= </span><span><img src="coin.png" id="coinn" alt="coin"></span> <span style="font-weight: bolder; font-size: 23px;">500</span></div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
