--- a/withdraw.html
+++ b/withdraw.html
@@ -76,6 +76,8 @@
             color: rgb(114, 2, 129);
             margin: 8px 0;
             text-align: center;
+            align-items: center;
+            justify-content: center;
             font-weight: 600;
         }
 
