--- a/withdraw.html
+++ b/withdraw.html
@@ -268,7 +268,7 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">Min. Withdrawal= <span style="display: flex; align-items: center; justify-content: center;"><span><img src="coin.png" id="coinn" alt="coin"></span> <span style="font-weight: bolder; font-size: 23px;"> 500</span></span></div>
+            <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder; font-size: 23px;"> 500 Coins</span></span></div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
