--- a/withdraw.html
+++ b/withdraw.html
@@ -71,13 +71,11 @@
         }
 
         .child-info {
-            display: flex;
+            
             font-size: 18px;
             color: rgb(114, 2, 129);
             margin: 8px 0;
             text-align: center;
-            align-items: center;
-            justify-content: center;
             font-weight: 600;
         }
 
@@ -268,7 +266,7 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder; font-size: 23px;"> 500 Coins</span></span></div>
+            <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder; font-size: 23px;"> 500 Coins</span></div>
             <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
