--- a/withdraw.html
+++ b/withdraw.html
@@ -15,11 +15,6 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        #coinn{
-            height: 20px;
-            width: 20px;
-        }
-
         body {
             background-color: azure;
             display: flex;
@@ -266,8 +261,8 @@
     <div id="withdrawPage" class="withdraw-page">
         <span>Withdraw Your Coins</span>
         <div class="withdraw-info">
-            <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder; font-size: 23px;"> 500 Coins</span></div>
-            <div class="child-info">Conversion Rate: 1 Coin = $0.01</div>
+            <div class="child-info">Min. Withdrawal= <span style="font-weight: bolder;"> 500</span>Coins</div>
+            <div class="child-info">Conversion Rate: 1 Coin =<span style="font-weight: bolder;"> $0.01</span></div>
             <form id="withDrawReq" class="withdraw-form">
                 <label for="withdrawn-coin">COIN:</label>
                 <input type="number" id="withdrawn-coin" placeholder="Enter Coins" required>
