--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="nav-menu" id="navMenu">
                 <ul>
                     <li><a href="/" class="link active">Home</a></li>
-                    <li><a href="/blog.html" class="link">Blog</a></li>
+                    <li><a href="/adminPage.html" class="link">Admin</a></li>
                     <li><a href="/tested.html" class="link">tested</a></li>
                     <li><a href="/about.html" class="link">About</a></li>
                 </ul>
