--- a/adminPage.html
+++ b/adminPage.html
@@ -88,15 +88,46 @@
         <pre id="links"></pre>
         <form onsubmit="updateLinks(event)">
             <h3>Update Links</h3>
-            <input type="url" id="affiliateLink1" placeholder="Enter affiliate product link 1"><br>
-            <input type="url" id="imageLink1" placeholder="Enter product image link 1"><br><br>
-            <input type="url" id="affiliateLink2" placeholder="Enter affiliate product link 2"><br>
-            <input type="url" id="imageLink2" placeholder="Enter product image link 2"><br><br>
-            <input type="url" id="affiliateLink3" placeholder="Enter affiliate product link 3"><br>
-            <input type="url" id="imageLink3" placeholder="Enter product image link 3"><br><br>
-            <input type="url" id="affiliateLink4" placeholder="Enter affiliate product link 4"><br>
-            <input type="url" id="imageLink4" placeholder="Enter product image link 4"><br><br>
-
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="affiliateLink1">Affiliate Product Link 1:</label>
+                    <input type="url" id="affiliateLink1" placeholder="Enter affiliate product link 1">
+                </div>
+                <div class="form-group">
+                    <label for="imageLink1">Product Image Link 1:</label>
+                    <input type="url" id="imageLink1" placeholder="Enter product image link 1">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="affiliateLink2">Affiliate Product Link 2:</label>
+                    <input type="url" id="affiliateLink2" placeholder="Enter affiliate product link 2">
+                </div>
+                <div class="form-group">
+                    <label for="imageLink2">Product Image Link 2:</label>
+                    <input type="url" id="imageLink2" placeholder="Enter product image link 2">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="affiliateLink3">Affiliate Product Link 3:</label>
+                    <input type="url" id="affiliateLink3" placeholder="Enter affiliate product link 3">
+                </div>
+                <div class="form-group">
+                    <label for="imageLink3">Product Image Link 3:</label>
+                    <input type="url" id="imageLink3" placeholder="Enter product image link 3">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="affiliateLink4">Affiliate Product Link 4:</label>
+                    <input type="url" id="affiliateLink4" placeholder="Enter affiliate product link 4">
+                </div>
+                <div class="form-group">
+                    <label for="imageLink4">Product Image Link 4:</label>
+                    <input type="url" id="imageLink4" placeholder="Enter product image link 4">
+                </div>
+            </div>
             <button type="submit">Update Links</button>
         </form>
     </div>
